fix visibility of nav in mobile

--- a/src/app/navbar/styles/navbar.component.scss
+++ b/src/app/navbar/styles/navbar.component.scss
@@ -28,43 +28,49 @@
       }
     }
   }
-  .nav-links {
+  .nav-links-bg {
+    height: 100%;
     width: 100%;
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    margin: 0;
-    padding: 0;
-    list-style-type: none;
-
-    li {
-      height: 100%;
-      padding: 1% 4%;
-      background: transparent;
-      transition: 0.15s ease;
+    .nav-links {
+      width: 100%;
       display: flex;
-      justify-content: center;
+      justify-content: space-between;
       align-items: center;
-      cursor: pointer;
+      margin: 0;
+      padding: 0;
+      list-style-type: none;
+      min-height: 8vh;
 
-      a {
-        color: rgb(228, 228, 228);
-        text-decoration: none;
-        cursor: pointer;
-        font-weight: 600;
-        font-family: sans-serif;
-        font-size: larger;
+      li {
+        height: 100%;
+        padding: 1% 4%;
+
+        background: transparent;
         transition: 0.15s ease;
-        &:hover {
-          color: #e9c80d;
-        }
-      }
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        cursor: pointer;
 
-      &:hover {
-        // background: rgba(255, 255, 255, 0.15);
-        background: black;
         a {
-          color: #e9c80d;
+          color: rgb(228, 228, 228);
+          text-decoration: none;
+          cursor: pointer;
+          font-weight: 600;
+          font-family: sans-serif;
+          font-size: larger;
+          transition: 0.15s ease;
+          &:hover {
+            color: #e9c80d;
+          }
+        }
+
+        &:hover {
+          // background: rgba(255, 255, 255, 0.15);
+          background: black;
+          a {
+            color: #e9c80d;
+          }
         }
       }
     }
@@ -72,8 +78,11 @@
 }
 
 @media screen and (max-width: 1100px) {
-  .nav .nav-links li {
-    padding: 1% 2%;
+  .nav .nav-links-bg .nav-links {
+    justify-content: center;
+    li {
+      padding: 1% 2%;
+    }
   }
 }
 
@@ -88,11 +97,15 @@
     .navbar {
       min-height: 10vh;
       align-items: center;
-      width: 50vw;
+      width: 30vw;
       display: flex;
       justify-content: flex-end;
       transition: 1s ease;
       clip-path: polygon(0 0, 100% 0, 100% 100%, 2% 100%);
+      &:focus {
+        width: 30vw;
+        background: transparent;
+      }
       &:hover,
       &.nav-active {
         width: 50vw;
@@ -102,34 +115,41 @@
         }
       }
     }
-    .nav-links {
+    .nav-links-bg {
       position: absolute;
       clip-path: polygon(0 0, 100% 0, 100% 100%, 20% 100%);
       right: 0;
       height: 90.1vh;
       top: 9.9vh;
       background: darkcyan;
-      flex-direction: column;
-      align-items: center;
       width: 49vw;
       transform: translateX(100%);
       transition: 0.5s ease-in;
-      li {
-        opacity: 0;
-        width: 100%;
-        a {
-          padding-left: 10vw;
-          color: white;
-          &:hover {
-            color: white;
-          }
-        }
-        &:hover {
-          background: rgba(255, 255, 255, 0.15);
-        }
-      }
       &.nav-active {
         transform: translateX(0);
+      }
+      .nav-links {
+        height: 80%;
+        flex-direction: column;
+        align-items: center;
+        width: 100%;
+        li {
+          opacity: 0;
+          width: 100%;
+          a {
+            padding-left: 10vw;
+            color: white;
+            &:hover {
+              color: white;
+            }
+          }
+          &:hover {
+            background: rgba(255, 255, 255, 0.15);
+            a {
+              color: white;
+            }
+          }
+        }
       }
     }
   }
